# rinhook

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: build.yml  rust.yml
crates/napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/napi/npm/darwin-arm64/: package.json
crates/napi/npm/linux-x64-gnu/: package.json
crates/napi/npm/win32-x64-msvc/: package.json
crates/napi/src/: lib.rs
examples/: serialize.rs
packaging/: install-bridge.sh  rinhook.service
src/: rdev.rs
src/linux/wayland/: grab.rs  keycodes.rs  listen.rs
src/linux/x11/: common.rs  grab.rs
src/macos/: common.rs  display.rs  grab.rs  simulate.rs
src/windows/: common.rs  grab.rs  listen.rs
test/: mock_bridge.py  read_socket.py  test_bridge.sh
